fix: complete recovery flow cleanup from post-implementation triage (Issue #180)
Addresses all gaps found during iterative fresh-eyes triage after the
initial 4-commit deprecation. The previous gap-fix commit (6db7448)
had edits that did not persist; this commit applies them correctly
along with additional artifacts discovered in subsequent passes.

Go code:
- Remove dead isRecovery/recoveryAttempt params from rego evaluator test
- Replace deprecated "recovery-analysis" AnalysisType in events_test
- Clean stale recovery method comments in investigating.go
- Update stale recovery session comment in holmesgpt.go
- Remove DD-RECOVERY-002 from cmd/aianalysis and controller comments
- Update 5 recovery comments in WE types + regenerate CRD YAML
- Fix stale Rego comment referencing removed recovery rules

Python code:
- Delete test_real_llm_integration.py (entire TestRealRecoveryAnalysis class)
- Replace DD-RECOVERY-003 with DD-HAPI-001 across 8 files
- Remove RecoveryResponse from validate-openapi-spec.py
- Update stale recovery comments in test_remediation_history files
- Clean recovery/prompt_builder.py ref from fix_unstructured_data script

Scripts:
- Fix debug_tool_visibility.py broken import from deleted recovery module
- Rewrite test-mcp-integration.sh to use incident endpoint (was recovery)
- Fix test-rca-integration.sh to use incident endpoint
- Remove recovery validation from generate-hapi-client.sh
- Remove RecoveryRequest from validate-openapi-client-usage.sh

Generated clients:
- Regenerate Go OAS client (removes DD-RECOVERY-003 from oas_schemas_gen)
- Clean Python test client metadata (FILES, README, stale doc files)
- Delete orphaned recovery schema docs (ExecutionFailure, OriginalRCA,
  PreviousExecution, SelectedWorkflowSummary)

Docs:
- Archive RECOVERY_REFACTORING_PLAN.md with deprecation header
- Remove recovery.py references from V1.0_PENDING_AND_OPTIONAL_WORK.md
- Remove recovery E2E row from XFAIL_POLICY_COMPLIANCE.md

Made-with: Cursor

--- a/holmesgpt-api/V1.0_PENDING_AND_OPTIONAL_WORK.md
+++ b/holmesgpt-api/V1.0_PENDING_AND_OPTIONAL_WORK.md
@@ -195,8 +195,7 @@
 **Analysis Results**: ✅ **NO SIGNIFICANT DUPLICATION**
 
 **Evidence**:
-- `incident.py` and `recovery.py` share similar patterns (intentional - consistency)
-- Prompt generation is similar but contextually different
+- Prompt generation patterns are consistent
 - No copy-paste anti-patterns detected
 
 **Recommendation**: ✅ **No refactoring needed**
@@ -209,7 +208,6 @@
 | File | LOC | Complexity | Status |
 |------|-----|------------|--------|
 | `incident.py` | 1,592 | High | ✅ Acceptable (main business logic) |
-| `recovery.py` | 1,724 | High | ✅ Acceptable (main business logic) |
 | `workflow_catalog.py` | 1,101 | Medium | ✅ Good |
 | `llm_config.py` | 525 | Medium | ✅ Good |
 | `llm_sanitizer.py` | 523 | Medium | ✅ Good |
@@ -269,7 +267,6 @@
 ### **1. Code Duplication** ✅ **NONE FOUND**
 
 **Analyzed**:
-- `incident.py` vs `recovery.py` (similar but contextually different)
 - Prompt generation patterns (intentionally consistent)
 - Error handling patterns (standardized, not duplicated)
 
@@ -281,7 +278,6 @@
 
 **Long Methods Identified**:
 - `analyze_incident()`: 400+ lines
-- `analyze_recovery()`: 400+ lines
 - `SearchWorkflowCatalogTool._invoke()`: 100+ lines
 
 **Analysis**: These are main business logic flows with:
